--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurante</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,10 +59,10 @@
                         <img src="./images/slides/slide1.png" alt="Foto do espaço interno do restaurante">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="./images/slides/slide3.png" alt="Uma mesa com comida"> 
+                        <img src="./images/slides/slide2.png" alt="Duas taças de vinho">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="./images/slides/slide2.png" alt="Duas taças de vinho">
+                        <img src="./images/slides/slide3.png" alt="Uma mesa com comida">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -377,13 +378,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
         </section>
         <section id="fale-conosco" class="pt-5 pb-5">
             <div class="container">
                 <div class="row">
-                    <h2 class="section-title text-center">fale <span class="text-colored">conosco</span></h2>
+                    <h2 class="section-title text-center">fale<span class="text-colored">conosco</span></h2>
                 </div>
                 <div class="row">
                     <div class="col-md-7 mb-5">
@@ -459,60 +459,3 @@
 </body>
 
 </html>
-=======
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Médias</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./main.css">
-</head>
-<body>
-    <div class="container">
-        <header>
-            <img src="./images/logo.png" alt="capelo e diploma">
-            <h1>Calculadora de Médias</h1>
-        </header>
-        <form id="form-atividade">
-            <input type="text" id="nome-atividade" required placeholder="Nome da atividade"/>
-            <input type="number" id="nota-atividade" required placeholder="Nota da atividade" min="0" max="10"/>
-            <button type="submit">Adicionar +</button>
-        </form>
-        <table border-spacing="0">
-            <thead>
-                <tr>
-                    <th>
-                        Nome da atividade
-                    </th>
-                    <th>
-                        Nota da atividade
-                    </th>
-                    <th>
-                        Aprovado?
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Atividade 1</td>
-                        <td>7</td>
-                        <td><img src="./images/aprovado.png" alt="Emoji festejando"></td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td>Média final</td>
-                        <td id="media-final-valor">---</td>
-                        <td id="media-final-resultado">---</td>
-                    </tr>
-                </tfoot>
-        </table>
-    </div>
-    <script src="./main.js"></script>
-</body>
-</html>
->>>>>>> f874613f70bbf0b4e7d6ea5905e48d00096031d2
